--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "font-awesome": "^4.7.0",
+    "ldrs": "^1.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
