policy page done

--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/material-next": "^6.0.0-alpha.119",
+    "@mui/x-date-pickers": "^6.19.5",
+    "@mui/x-date-pickers-pro": "^6.19.5",
     "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "ldrs": "^1.0.1",
     "nodemon": "^3.0.1",
