--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.5",
     "ldrs": "^1.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
