cookies bug fix

--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,12 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.15.3",
+    "mjml-core": "^4.15.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1"
   }
 }
