--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "@mui/x-charts": "^7.5.0",
     "@mui/x-date-pickers": "^7.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
