--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.18",
     "@mui/x-charts": "^7.5.0",
+    "@mui/x-data-grid": "^7.6.0",
     "@mui/x-date-pickers": "^7.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -24,12 +25,13 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.17.3",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -51,6 +53,5 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
-  },
-  "proxy": "http://localhost:9090/api"
+  }
 }
